// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MsResizable 组件 demo 测试 正确渲染 MsResizable basic.tsx 1`] = `
<div>
  <div
    style="display: flex;"
  >
    <div
      class="ms-resizable"
      style="height: 200px; width: 200px; padding-right: 21px;"
    >
      <div
        class="ms-resizable-content"
        style="overflow: hidden;"
      >
        左侧区域 左侧区域 左侧区域 左侧区域 左侧区域 左侧区域 左侧区域 左侧区域 左侧区域 左侧区域 左侧区域 左侧区域 左侧区域 左侧区域 左侧区域
      </div>
      <div
        class="ms-resizable-handle ms-resizable-handle-left"
        style="cursor: ew-resize;"
      />
      <div
        class="ms-resizable-trapezoid ms-resizable-trapezoid-left"
        style="top: 0px;"
      >
        <span
          class="anticon"
          role="img"
        />
      </div>
    </div>
    <div
      style="flex: 1; padding: 16px; margin: 0px 16px; overflow: hidden; background-color: rgb(250, 250, 250);"
    >
      中间区域 中间区域 中间区域 中间区域 中间区域 中间区域 中间区域 中间区域 中间区域
    </div>
    <div
      class="ms-resizable"
      style="height: 200px; width: 200px; padding-left: 21px;"
    >
      <div
        class="ms-resizable-content"
      >
        右侧区域 右侧区域 右侧区域 右侧区域 右侧区域 右侧区域 右侧区域 右侧区域 右侧区域 右侧区域 右侧区域 右侧区域 右侧区域 右侧区域 右侧区域
      </div>
      <div
        class="ms-resizable-handle ms-resizable-handle-right"
        style="cursor: ew-resize;"
      />
      <div
        class="ms-resizable-trapezoid ms-resizable-trapezoid-right"
        style="bottom: 0px;"
      >
        <span
          class="anticon"
          role="img"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`MsResizable 组件 demo 测试 正确渲染 MsResizable disabled.tsx 1`] = `
<div>
  <div
    class="ms-resizable"
    style="height: 500px; width: 200px; padding-right: 21px;"
  >
    <div
      class="ms-resizable-content"
    >
      展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案
    </div>
    <div
      class="ms-resizable-handle ms-resizable-handle-left"
      style="cursor: default;"
    />
    <div
      class="ms-resizable-trapezoid ms-resizable-trapezoid-left"
      style="top: 40%;"
    >
      <span
        class="anticon"
        role="img"
      />
    </div>
  </div>
</div>
`;

exports[`MsResizable 组件 demo 测试 正确渲染 MsResizable set-width.tsx 1`] = `
<div>
  <div
    class="ms-resizable"
    style="height: 400px; width: 300px; padding-right: 21px;"
  >
    <div
      class="ms-resizable-content"
    >
      展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案展示文案
    </div>
    <div
      class="ms-resizable-handle ms-resizable-handle-left"
      style="cursor: ew-resize;"
    />
    <div
      class="ms-resizable-trapezoid ms-resizable-trapezoid-left"
      style="top: 40%;"
    >
      <span
        class="anticon"
        role="img"
      />
    </div>
  </div>
</div>
`;
